# gwviz

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  tests.yml
examples/: plot_cbc.py  plot_detector_angles.py
src/gwviz/: __init__.py  angles.py  cbcplot.py  detplot.py  mplutils.py  orbit.py  vectors.py
tests/: conftest.py  test_cbcplot.py  test_detplot.py
