[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gwviz"
description = "Visualizing gravitational-wave systems using Python"
authors = [
    {name = "Michael J. Williams", email = "michaeljw1@googlemail.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["plotting"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools_scm]

[tool.black]
line-length = 79
